# log-parser

./: Cargo.toml  README.md  WCG100140020_output.txt  banner.txt  plan-dist-manifest.json
.github/workflows/: rust-build.yml  rust-release.yml  rust.yml
doc/: Meeting Reports.docx  Something we should know….docx
doc/toSkateholder/: Demo1.pptx  Demo3.pptx
launcher/: Cargo.toml
launcher/src/: launcher_params.rs  main.rs
launcher/wix/: main.wxs
loader/: Cargo.toml
loader/src/: data_frame.rs  data_loder.rs  lib.rs
log-loader/: Cargo.toml
log-loader/src/: main.rs
log_file/: WCG100140201.txt  WCG100140624.txt  test.txt  test_log.txt
mytest/: Cargo.toml
mytest/src/: main.rs
