[package]
name = "launcher"
version = "0.1.0"
edition = "2021"
repository= "https://github.com/bytemaker-io/log-parser"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4", features=["derive","color"]}

tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio = { version = "1.36.0",features = ["full"] }
colored = "2.1.0"
loader={path = "../loader"}